Syntax update in unit commitment notebook

--- a/unitcommitment/ucp.ipynb
+++ b/unitcommitment/ucp.ipynb
@@ -272,7 +272,8 @@
     "    scCost = Expr.dot(v[:,1:], repeat(sc, T))\n",
     "    fxCost = Expr.dot(u[:,1:], repeat(fx, T))\n",
     "    # Linear part of production cost bp\n",
-    "    bCost = Expr.sum(b * p[:,1:])\n",
+    "    b = np.reshape(np.array(b), (len(b), 1))\n",
+    "    bCost = Expr.sum(b.T @ p[:,1:])\n",
     "    allCosts = [bCost, Expr.constTerm(sum(c)*ucp.T), fxCost, scCost]\n",
     "    # Quadratic part of production cost ap^2\n",
     "    if not onlyLinear:\n",
@@ -645,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
